html/extract-download.css
/*
 * for http://download.bbbike.org only
 *
 */

/* luft.css */

body {
  background-color:#ffffff;
  color:#000000;
  font-family:sans-serif,helvetica,verdana,arial;
  margin: 0px;
  width: 100%;
  height: 100%;
  z-index: 0;
}


div#map_area {
    position: fixed;
    width: 100%;
}

div#nomap {
    padding-top: 535px; /* +55px */
    margin-left: 8px;
    margin-right: 8px;
}

div#map_after {
    padding-top: 4px;
    padding-bottom: 2px;
    padding-left: 8px;
    padding-right: 8px;
    background: white;
}

div#map_after {
    z-index: 10000;
}

div#nomap {
    z-index: 0;
}

span#debug { font-size: small; }
span#language_switch { font-size: small; }
span.current_language { font-size: large; }

span#language {
    position: fixed;
    top: 10px;
    right: 5px;
    z-index: 1000000000;
}
span#debug {
    position: fixed;
    top: 460px; /* -20px */
    left: 120px;
    z-index: 1000000000;
}

table#download {
    z-index: -1;
}

/* link colors */
a { text-decoration:none; color: green; }
a:hover { text-decoration:underline; }


div#footer { font-size: small; text-align: center; padding-top: 0.7em; }
div#footer_top { text-align: left; }

/* ************************************************************ */
/*Win IE fix \*/
* html #all_XXX { width: 56em; }
/*End Win IE fix*/
/* ************************************************************ */


h2 { text-align: center; } 
div#copyright { text-align: center; padding-top: 0.7em; font-size: small; }

tbody tr:nth-child(odd)  { background-color: #EEE; }
tbody tr:nth-child(even) { background-color: #FFF; }
tbody tr:nth-child(odd):hover, tr:nth-child(even):hover { background-color:silver; }

tbody tr td:nth-child(1), thead tr th:nth-child(1) { text-align: right; }
tbody tr td:nth-child(2), thead tr th:nth-child(2) { text-align: right; }
tbody tr td:nth-child(3), thead tr th:nth-child(3) { text-align: right; }
tbody tr td:nth-child(4), thead tr th:nth-child(4) { text-align: center; }
tbody tr td:nth-child(5), thead tr th:nth-child(5) { text-align: center; }

tbody tr td:nth-child(1) { min-width: 22em; }
tbody tr td:nth-child(2) { min-width: 12em; }
tbody tr td:nth-child(3) { min-width: 5em; }
tbody tr td:nth-child(4) { min-width: 4em; }

table#download td, table.download th {
  border: 1px solid #DDD;
  padding-left: 4px !important;
  padding-right: 4px !important;
}

/* donate section */
table#donate tr { background-color: #FFF; }
table#donate tr td:nth-child(1) { text-align: left; }
table#donate tr td:nth-child(2) { text-align: right; }
table#donate { width: 100%; }

th { border-left: 1px solid #b9b8b6; }
/* no line breaks in table header */
th { white-space: nowrap; }
tr { border: 0px solid; }

div#bottom {
    margin-top: 2em;
}

h2 { text-align: center; }

/* a rectangle or a polygon */
a.polygon1 { font-style: italic; }


/*
 * formats by color
*/
span.format_csv_gz { color: yellow; }
span.format_csv_xz { color: yellow; }

span.format_garmin_bbbike_zip { color: #DAA520; }
span.format_garmin_cycle_zip { color: #DAA520; }
span.format_garmin_leisure_zip { color: #DAA520; }
span.format_garmin_osm_zip { color: #DAA520; }

span.format_mapsforge_osm_zip { color: grey; }
span.format_shp_zip { color: orange; }
span.format_navit_zip { color: lightblue; }

span.format_o5m_gz { color: #B22222; }
span.format_o5m_xz { color: #B22222; }
span.format_obf_zip { color: #B22222; }
span.format_opl_xz { color: #B22222; }
span.format_osm_bz2 { color: #B22222; }
span.format_osm_gz { color: #B22222; }
span.format_osm_pbf { color: #B22222; }
span.format_osm_xz { color: #B22222; }

span.format_srtm_europe_garmin_srtm_zip { color: brown; }
span.format_srtm_europe_obf_zip { color: brown; }
span.format_srtm_europe_osm_pbf { color: brown; }
span.format_srtm_garmin_srtm_zip { color: brown; }
span.format_srtm_obf_zip { color: brown; }
span.format_srtm_osm_pbf { color: brown; }

